# elm-client-gen

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/elm-client-gen-builder/: README.md
crates/elm-client-gen-builder/src/: decoder.rs  encoder.rs  endpoint.rs  module_builder.rs  name_map.rs  overrides.rs  request_style.rs  type_builder.rs
crates/elm-client-gen-builder/tests/: proptest.rs  smoke.rs  snapshot.rs
crates/elm-client-gen-builder/tests/snapshots/: snapshot__bare_string_enum_module.snap  snapshot__imports_collapse_for_same_target_module.snap  snapshot__internally_tagged_enum_module.snap  snapshot__merge_tagged_object_module.snap  snapshot__newtype_module.snap  snapshot__patch_field_module.snap  snapshot__record_module.snap  snapshot__tuple_fields_module.snap  snapshot__untagged_enum_module.snap
crates/elm-client-gen-core/src/: lib.rs
crates/elm-client-gen-derive-tests/tests/compile_pass/: decoder_step_attr.rs  encoder_pairs_attr.rs  type_app_override.rs
crates/elm-client-gen-derive/src/: lib.rs
crates/elm-client-gen-http/: README.md
crates/elm-client-gen-http/src/: lib.rs
crates/elm-codegen-builder/: Cargo.toml  README.md
crates/elm-codegen-builder/src/: decoder.rs  encoder.rs  endpoint.rs  helpers.rs  lib.rs  module_builder.rs  name_map.rs  overrides.rs  strategy.rs  type_builder.rs
crates/elm-codegen-builder/tests/: proptest.rs  smoke.rs  snapshot.rs
crates/elm-codegen-builder/tests/snapshots/: snapshot__bare_string_enum_module.snap  snapshot__internally_tagged_enum_module.snap  snapshot__merge_tagged_object_module.snap  snapshot__newtype_module.snap  snapshot__record_module.snap  snapshot__tuple_fields_module.snap  snapshot__untagged_enum_module.snap
crates/elm-codegen-cli/: Cargo.toml  README.md
crates/elm-codegen-cli/src/: lib.rs  main.rs
crates/elm-codegen-cli/tests/: smoke.rs
crates/elm-codegen-core/: Cargo.toml  README.md
crates/elm-codegen-core/src/: lib.rs
crates/elm-codegen-derive/: Cargo.toml  README.md
crates/elm-codegen-derive-tests/: Cargo.toml
crates/elm-codegen-derive-tests/src/: lib.rs
crates/elm-codegen-derive-tests/tests/compile_fail/: conflicting_serde_attrs.rs  externally_tagged_enum.rs  generic_struct.rs  missing_module.rs  multi_field_tuple_struct.rs  non_string_map_key.rs  tuple_arity_four.rs  union.rs  unit_struct.rs  untagged_multi_field_tuple_variant.rs
crates/elm-codegen-derive-tests/tests/compile_pass/: bare_string_enum.rs  internally_tagged_enum.rs  newtype_struct.rs  record_struct.rs  untagged_enum.rs
crates/elm-codegen-derive/src/: lib.rs
