[package]
name = "elm-codegen-core"
description = "Core types and trait for generating Elm code from Rust types."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
inventory.workspace = true
elm-codegen-derive = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["dep:elm-codegen-derive"]
