[package]
name = "elm-codegen-derive-tests"
description = "Trybuild harness for elm-codegen-derive. Not published."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]

[dev-dependencies]
elm-codegen-core = { workspace = true, features = ["derive"] }
trybuild.workspace = true
