[package]
name = "elm-codegen-derive"
description = "#[derive(ElmType)] proc macro for elm-codegen-core."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
